--- a/scss/_structuring.scss
+++ b/scss/_structuring.scss
@@ -17,12 +17,13 @@
   }
   .parrafo{
        margin-top: 20px;
+       height: 130px;
        font-family: 'Lexend Deca', sans-serif;
        font-weight: 400;
        color: white;
   }
   .button_A{
-      margin-top: 50px;
+      margin-top: 30px;
       border-radius: 30px;
       width: 120px;
       padding:10px;
@@ -55,12 +56,13 @@
     }
     .parrafo{
         margin-top: 20px;
+        height: 130px;
         font-family: 'Lexend Deca', sans-serif;
         font-weight: 400;
         color: white;
    }
    .button_B{
-    margin-top: 50px;
+    margin-top: 30px;
     border-radius: 30px;
     width: 120px;
     padding:10px;
@@ -93,12 +95,13 @@
     }
     .parrafo{
         margin-top: 20px;
+        height: 130px;
         font-family: 'Lexend Deca', sans-serif;
         font-weight: 400;
         color: white;
    }
    .button_C{
-    margin-top: 50px;
+    margin-top: 30px;
     border-radius: 30px;
     width: 120px;
     padding:10px;
