Actualizando tarjeta columnas

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,6 @@
 .CONTAINER_BASE .CONT_GRID {
   width: 800px;
   height: 400px;
-  background: rgba(95, 158, 160, 0.384);
   margin: auto;
   overflow: hidden;
   border-radius: 10px;
@@ -44,17 +43,17 @@
   .CONTAINER_BASE {
     width: 100%;
     max-width: 1440px;
-    height: 100vh;
-    margin: 50px auto;
+    height: initial;
+    margin: 100px auto;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   .CONTAINER_BASE .CONT_GRID {
     width: 90%;
-    height: auto;
-    background: rgba(18, 43, 44, 0.685);
-    margin: auto;
+    height: initial;
+    padding: 0px;
+    background: rgba(47, 187, 192, 0.685);
     border-radius: 10px;
     display: grid;
     grid-template-columns: 1fr;
@@ -62,16 +61,17 @@
     grid-template-areas: "CUADRO_A" "CUADRO_B" "CUADRO_C";
   }
   .CONTAINER_BASE .CONT_GRID .CUADRO_A {
-    background: crimson;
     grid-area: CUADRO_A;
+    border-radius: 10px 10px 0px 0px;
+    overflow: hidden;
   }
   .CONTAINER_BASE .CONT_GRID .CUADRO_B {
-    background: crimson;
     grid-area: CUADRO_B;
   }
   .CONTAINER_BASE .CONT_GRID .CUADRO_C {
-    background: crimson;
     grid-area: CUADRO_C;
+    border-radius: 0px 0px 10px 10px;
+    overflow: hidden;
   }
 }
 .contCuadro_A {
@@ -183,12 +183,6 @@
   border: none;
   font-family: "Lexend Deca", sans-serif;
   font-weight: 400;
-}
-
-@media (min-width: 320px) and (max-width: 423px) {
-  .contCuadro_A {
-    width: 100%;
-  }
 }
 
 /*# sourceMappingURL=main.css.map */
