--- a/scss/_structuring.scss
+++ b/scss/_structuring.scss
@@ -32,6 +32,12 @@
       border: none;
       font-family: 'Lexend Deca', sans-serif;
       font-weight: 400;
+      transition: 0.5s all;
+  }
+  .button_A:hover{
+    background: #fc9e41;
+    color: white;
+    cursor: pointer;
   }
 }
 
@@ -71,7 +77,13 @@
     border: none;
     font-family: 'Lexend Deca', sans-serif;
     font-weight: 400;
-}
+    transition: 0.5s all
+    }
+    .button_B:hover{
+        background: #238d99;
+        color: white;
+        cursor: pointer;
+    }
 }
 
 
@@ -110,7 +122,13 @@
     border: none;
     font-family: 'Lexend Deca', sans-serif;
     font-weight: 400;
-}
+    transition: 0.5s all;
+    }
+    .button_C:hover{
+        background: #086968;
+        color: white;
+        cursor: pointer;
+    }
 }
 
 
